<resources>

    <string name="app_name">gome</string>


    <string name="alert_action_ok">Ok</string>
    <string name="alert_action_cancel">Cancel</string>
    <string name="alert_action_leave">Leave</string>
    <string name="alert_action_delete">Delete</string>
    <string name="alert_action_confirm">Confirm</string>
    <string name="alert_action_new">New</string>
    <string name="alert_action_save">Save</string>
    <string name="alert_action_yes">Yes</string>
    <string name="alert_action_no">No</string>
    <string name="alert_action_close">Close</string>

    <string name="alert_title_success">Success!</string>
    <string name="alert_title_confirm">Confirmation</string>
    <string name="alert_title_error">Something went wrong</string>
    <string name="alert_title_loading">Loading</string>
    <string name="alert_title_oops">Oops</string>

    <string name="alert_message_please_wait">Please wait...</string>
    <string name="alert_message_permission_required">You need to grant permissions to do that!</string>
    <string name="alert_message_connection_required">You need to be connected in order to do that!</string>
    <string name="alert_message_connection_closed">Disconnected from server!</string>


    <string name="base__dialog_input_hint">Enter value here</string>


    <string name="ip__input_info">Enter the IP Address of your host, or use the search button to find computers on your local WiFi network.</string>

    <string name="ip__action_set">Set</string>
    <string name="ip__action_update">Update</string>
    <string name="ip__action_search">Search for Host</string>
    <string name="ip__action_searching">Searching for a host... Please wait...</string>
    <string name="ip__action_select">Connect</string>
    <string name="ip__hint">IP Address</string>


    <string name="connect__title">Connect to a Host</string>


    <string name="controller__title">Connected to %1$s</string>

    <string name="controller__alert_connecting">Connecting to %1$s, please wait one moment...</string>


    <string name="mouse__action_left_single_click">Left Click</string>
    <string name="mouse__action_left_double_click">Double Click</string>

    <string name="mouse__action_wheel_click">Wheel Click</string>

    <string name="mouse__action_drag_start">Drag Start</string>
    <string name="mouse__action_drag_stop">Drag Stop</string>

    <string name="mouse__action_scroll_start">Scroll Start</string>
    <string name="mouse__action_scroll_stop">Scroll Stop</string>

    <string name="mouse__action_right_click">Right Click</string>


    <string name="devices__searching_alert_title">Searching for Devices</string>
    <string name="devices__selection_alert_title">Select a Device</string>
    <string name="devices__selection_alert_none_found">We couldn\'t find any devices on your network!</string>


    <string name="keyboard__input_hint">Just type....</string>

    <string name="keyboard__action_control">CTRL</string>
    <string name="keyboard__action_alt">ALT</string>
    <string name="keyboard__action_shift">SHIFT</string>
    <string name="keyboard__action_tab">TAB</string>
    <string name="keyboard__action_home">HOME</string>
    <string name="keyboard__action_end">END</string>
    <string name="keyboard__action_insert">INSERT</string>
    <string name="keyboard__action_delete">DEL</string>
    <string name="keyboard__action_escape">ESC</string>
    <string name="keyboard__action_enter">ENTER</string>


    <string name="settings__title">Settings</string>
    <string name="settings__category_move_speed">Move Speed (Low to High)</string>
    <string name="settings__category_scroll_speed">Scroll Speed (Low to High)</string>


    <string-array name="fu__font_family_resources">
        <item>roboto--normal=fonts/roboto.ttf,bold=fonts/roboto_bold.ttf</item>
    </string-array>


</resources>
