<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/base__primary"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/base__toolbar"
            style="@style/Base.Toolbar"/>

        <com.guardanis.gome.tools.views.TrackpadView
            android:id="@+id/main__move_view"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="#11FFFFFF"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:orientation="horizontal">

        <com.guardanis.gome.tools.views.TrackpadView
            android:id="@+id/main__scroll_view"
            android:layout_width="@dimen/scroll__trackpad_width"
            android:layout_height="match_parent"
            android:layout_gravity="left"
            android:background="@color/base__primary"/>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:layout_weight="1"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="75dip">

                <TextView
                    android:id="@+id/main__mouse_action_drag"
                    style="@style/main__action_item"
                    android:text="@string/mouse__action_drag_start"/>

            </LinearLayout>

            <TextView
                android:id="@+id/main__mouse_action_left_single_click"
                style="@style/main__action_item"
                android:text="@string/mouse__action_left_single_click"/>

            <TextView
                android:id="@+id/main__mouse_action_left_double_click"
                style="@style/main__action_item"
                android:text="@string/mouse__action_left_double_click"/>

            <TextView
                android:id="@+id/main__mouse_action_wheel_click"
                style="@style/main__action_item"
                android:text="@string/mouse__action_wheel_click"/>

            <TextView
                android:id="@+id/main__mouse_action_right_click"
                style="@style/main__action_item"
                android:text="@string/mouse__action_right_click"/>

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>