<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/base__toolbar"
        style="@style/Base.Toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/base__padding_0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/base__padding_0">

            <com.guardanis.fontutils.EditText
                android:id="@+id/connect__ip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/ip__hint"
                android:maxLines="1"
                android:padding="@dimen/base__padding_0"
                android:singleLine="true"
                android:textColor="@color/base__text_dark_1"
                android:textColorHint="@color/base__text_dark_3"
                android:textSize="@dimen/base__text_0"/>

            <TextView
                android:id="@+id/connect__ip_action_set"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/base__button_transparent_dark"
                android:gravity="center"
                android:padding="@dimen/base__padding_1"
                android:text="@string/ip__action_select"
                android:textColor="@color/base__text_dark_2"
                android:textSize="@dimen/base__text_2"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/connect__ip_searching_parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/base__padding_2"
            android:paddingTop="@dimen/base__padding_0"
            android:visibility="gone">

            <ProgressBar
                android:layout_width="@dimen/connect__progress_size"
                android:layout_height="@dimen/connect__progress_size"
                android:indeterminate="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/base__button_transparent"
                android:gravity="center"
                android:paddingLeft="@dimen/base__padding_1"
                android:text="@string/ip__action_searching"
                android:textColor="@color/base__text_dark_2"
                android:textSize="@dimen/base__text_2"/>

        </LinearLayout>

        <ListView
            android:id="@+id/connect__ip_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:cacheColorHint="@null"
            android:clipToPadding="false"
            android:divider="@color/base__button_transparent"
            android:dividerHeight="0dip"
            android:fadingEdgeLength="0dp"
            android:footerDividersEnabled="false"
            android:headerDividersEnabled="true"
            android:overScrollFooter="@null"
            android:overScrollMode="never"
            android:scrollingCache="false"/>
    </LinearLayout>

</LinearLayout>